--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,8 @@ h5 {
   font-size: 1em;
   text-align: center;
   padding-bottom: 10px;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
 .active{
@@ -76,7 +78,7 @@ h5 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 17%;
+  max-width: 40%;
   height:auto;
 }
 
@@ -89,13 +91,6 @@ h5 {
 }
 
 
-/* .row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-} */
-
-/* Create two equal columns that sits next to each other */
 .column {
   flex: 50%;
   padding-right: 5px;
